<resources>
    <string name="app_name">CMSC436Final</string>
    <string name="app_function">Location Based Tour Guide</string>
    <!-- Strings related to login -->
    <string name="reset_pass_email">Enter email</string>
    <string name="account_login_string">Account login</string>
    <string name="registration_title_string">Registration</string>
    <string name="registration_link_string">Don\'t have an account? Register here</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="name_hint_string">Name</string>
    <string name="email_hint_string">Email</string>
    <string name="password_hint_string">Password</string>
    <string name="password_confirm_hint_string">Confirm Password</string>
    <string name="login_string">Login</string>
    <string name="register_string">Register</string>
    <string name="reset_password_string">Forget Password?</string>
    <string name="send_reset_link">Send Reset Link</string>

    <!-- Strings related to navigation bar -->
    <string name="title_home">Home</string>
    <string name="title_search_tour">Search Tour</string>
    <string name="title_add_tour">Add Tour</string>
    <string name="title_user_profile">Profile</string>
    <string name="title_add_media">Add Media</string>
    <!-- UserProfile Strings-->
    <string name="user_profile_pic">*Username*</string>
    <string name="change_pic">Change Profile Picture</string>
    <string name="tours_created">Tours Created</string>
    <string name="tours_traveld">Tours Traveled</string>
    <string name="traveled_tours">Traveled Tours</string>
    <string name="created_tours">Created Tours</string>
    <string name="number_input">###</string>
    <string name="sign_out">Sign Out</string>
    <string name="unfinished_tours">Unfinished Tours</string>
    <string name="load_more_tours">Load More</string>
    <!-- Add tour strings -->
    <string name="add_tour_description">Tour description</string>
    <string name="add_tour_name">Tour name</string>
    <string name="checkpoint_tv">Add Checkpoint</string>
    <string name="add_checkpoint_name">Checkpoint name</string>
    <string name="add_checkpoint_description">Checkpoint description</string>
    <string name="add_location">Add location</string>
    <string name="add_media">Add Media</string>
    <string name="add_photo">+ Picture</string>
    <string name="select_photo">Select Picture</string>
    <string name="add_video">+ Video</string>
    <string name="select_video">Select Video</string>
    <string name="add_audio">+ Audio</string>
    <string name="select_audio">Select Audio</string>
    <string name="upload_media">Upload Media</string>
    <!-- Add tour strings -->
    <string name="search_tour">Search Tour</string>
    <!-- Others-->
    <string name="title_activity_home">Home</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="api_key">AIzaSyDpFxMtXyJ8rJSSaU70pKuuTSyBUPZjmt0</string>
    <string name="done">Done</string>

</resources>
