<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_search_tour"
        android:name="com.example.android.cmsc436final.ui.searchTour.SearchTourFragment"
        android:label="@string/title_search_tour"
        tools:layout="@layout/fragment_search_tour" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.locationbasedtourguide.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_add_tour"
        android:name="com.example.android.cmsc436final.ui.addTour.AddTourFragment"
        android:label="@string/title_add_tour"
        tools:layout="@layout/fragment_add_tour" />

    <fragment
        android:id="@+id/navigation_user_profile"
        android:name="com.example.android.cmsc436final.ui.userProfile.UserProfileFragment"
        android:label="@string/title_user_profile"
        tools:layout="@layout/fragment_user_profile" />
</navigation>