<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/registrationTitle"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="monospace"
        android:text="@string/registration_title_string"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="36sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/regUserPic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/regUserPic"
        android:layout_width="165dp"
        android:layout_height="110dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/user_profile_pic"
        android:src="@drawable/ic_person_black_24dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/regSelectPhotobutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationTitle"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/regName"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="38dp"
        android:ems="10"
        android:hint="@string/name_hint_string"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regSelectPhotobutton" />

    <EditText
        android:id="@+id/regUserEmail"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="38dp"
        android:ems="10"
        android:hint="@string/email_hint_string"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regName" />

    <EditText
        android:id="@+id/regPassword"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="38dp"
        android:ems="10"
        android:hint="@string/password_hint_string"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regUserEmail" />

    <Button
        android:id="@+id/newUserRegisterBttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="14dp"
        android:onClick="onClick"
        android:text="@string/register_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regSelectPhotobutton" />

    <EditText
        android:id="@+id/regPasswordConfirm"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="38dp"
        android:ems="10"
        android:hint="@string/password_confirm_hint_string"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regPassword" />

    <Button
        android:id="@+id/regSelectPhotobutton"
        android:layout_width="177dp"
        android:layout_height="43dp"
        android:layout_marginBottom="348dp"
        android:onClick="onClick"
        android:text="@string/choose_photo"
        app:layout_constraintBottom_toTopOf="@+id/newUserRegisterBttn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regUserPic" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regSelectPhotobutton" />

</androidx.constraintlayout.widget.ConstraintLayout>