<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/userProfileConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent">

    <TextView
        android:id="@+id/toursTraveledText"
        android:layout_width="174dp"
        android:layout_height="30dp"
        android:layout_marginTop="350dp"
        android:clickable="false"
        android:ems="10"
        android:inputType="none"
        android:text="@string/tours_traveld"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/toursCreatedText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/toursCreatedText"
        android:layout_width="174dp"
        android:layout_height="30dp"
        android:layout_marginTop="350dp"
        android:clickable="false"
        android:ems="10"
        android:inputType="none"
        android:text="@string/tours_created"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/toursTraveledText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/numToursTraveled"
        android:layout_width="107dp"
        android:layout_height="43dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/number_input"
        android:clickable="false"
        android:ems="10"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toursTraveledText" />

    <TextView
        android:id="@+id/numToursCreated"
        android:layout_width="107dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:autofillHints="@string/number_input"
        android:clickable="false"
        android:ems="10"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toursCreatedText" />

    <Button
        android:id="@+id/signOutButton"
        android:layout_width="190dp"
        android:layout_height="52dp"
        android:layout_marginTop="552dp"
        android:layout_marginEnd="108dp"
        android:text="@string/sign_out"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profilePictureView"
        android:layout_width="222dp"
        android:layout_height="194dp"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="504dp"
        android:contentDescription="@string/user_profile_pic"
        android:src="@drawable/user_profile_pic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/changeProfilePicButton"
        android:layout_width="39dp"
        android:layout_height="30dp"
        android:layout_marginStart="183dp"
        android:layout_marginTop="164dp"
        android:contentDescription="@string/change_pic"
        app:layout_constraintStart_toStartOf="@+id/profilePictureView"
        app:layout_constraintTop_toTopOf="@+id/profilePictureView"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="258dp"
        android:layout_height="39dp"
        android:layout_marginTop="263dp"
        android:layout_marginEnd="77dp"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>